// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultItem should handle 20 clicks correctly 1`] = `
<div
  className="MuiButtonBase-root-13 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-9 MuiListItem-button-10 sc-bdVaJa cPqfWC"
  onBlur={[Function]}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="sc-bwzfXH fVcXGd"
  >
    ssd
  </div>
  <div
    className="sc-htpNat hHtpcc"
  >
    <div
      className="sc-bxivhb jxkoxB"
    >
      Bulbasaur
    </div>
    <div
      className="sc-ifAKCX hrWLvt"
    >
      Grass
      Poison
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-16"
  />
</div>
`;

exports[`SearchResultItem should handle click correctly 1`] = `
<div
  className="MuiButtonBase-root-13 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-9 MuiListItem-button-10 sc-bdVaJa cPqfWC"
  onBlur={[Function]}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="sc-bwzfXH fVcXGd"
  >
    ssd
  </div>
  <div
    className="sc-htpNat hHtpcc"
  >
    <div
      className="sc-bxivhb jxkoxB"
    >
      Bulbasaur
    </div>
    <div
      className="sc-ifAKCX hrWLvt"
    >
      Grass
      Poison
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-16"
  />
</div>
`;

exports[`SearchResultItem should render without fail 1`] = `
<div
  className="MuiButtonBase-root-13 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-9 MuiListItem-button-10 sc-bdVaJa cPqfWC"
  onBlur={[Function]}
  onClick={[MockFunction]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="sc-bwzfXH fVcXGd"
  >
    ssd
  </div>
  <div
    className="sc-htpNat hHtpcc"
  >
    <div
      className="sc-bxivhb jxkoxB"
    >
      Bulbasaur
    </div>
    <div
      className="sc-ifAKCX hrWLvt"
    >
      Grass
      Poison
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-16"
  />
</div>
`;
